--- a/inst/scaffold/config.yml
+++ b/inst/scaffold/config.yml
@@ -1,10 +1,6 @@
----
-framework: io2012
-theme: default
-highlighter: highlight.js
-hitheme: hemisu-light
-widgets: [mathjax, bootstrap]
-url:
-  lib: libraries
-  assets: assets
----
+# use this configuration file to override defaults
+framework   : landslide
+theme       : light
+highlighter : highlight.js
+hitheme     : github
+widgets     : [mathjax, bootstrap]
