export all publish_* functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,8 @@
 export(create_deck)
 export(publish_deck)
+export(publish_github)
+export(publish_rpubs)
+export(publish_dropbox)
 export(slidify)
 export(minify_css)
 import(knitr)
