--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(publish_github)
 export(publish_rpubs)
 export(publish_dropbox)
 export(slidify)
+export(slidifyRpubs)
 export(minify_css)
 import(knitr)
 import(markdown)
