--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,10 @@
 export(author)
+export(parse_deck)
 export(publish)
 export(publish_dropbox)
 export(publish_github)
 export(publish_rpubs)
+export(render_post)
 export(slidify)
 import(knitr)
 import(markdown)
