--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@ export(author)
 export(pagify)
 export(blogify)
 export(parse_deck)
+export(render_page)
+export(render_pages)
 export(publish)
 export(publish_dropbox)
 export(publish_github)
