move poirot functions to slidify for easier development.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(publish)
 export(publish_dropbox)
 export(publish_github)
 export(publish_rpubs)
+export(blogify)
+export(pagify)
 export(slidify)
 import(knitr)
 import(markdown)
