reorganize code base based on functionality

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,13 +22,12 @@ Collate:
     'add.R'
     'assets.R'
     'author.R'
-    'blogify.R'
+    'bloghelpers.R'
     'copy.R'
     'config.R'
     'layouts.R'
     'package.R'
     'parse.R'
-    'poirot.R'
     'process.R'
     'publish.R'
     'render.R'
@@ -36,4 +35,5 @@ Collate:
     'update.R'
     'urls.R'
     'utils.R'
+    'widgets.R'
     'zzz.R'
