add runDeck, includeDeck and make_standalone

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export(includeDeck)
 export(parse_deck)
 export(render_page)
 export(render_pages)
+export(runDeck)
 export(publish)
 export(publish_dropbox)
 export(publish_github)
