export publish_gist and view_deck

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,13 @@ export(render_pages)
 export(runDeck)
 export(publish)
 export(publish_dropbox)
+export(publish_gist)
 export(publish_github)
 export(publish_rpubs)
 export(blogify)
 export(pagify)
 export(slidify)
+export(view_deck)
 import(knitr)
 import(markdown)
 import(stringr)
