ignore .gitkeep files for building, but assert that empty directories are included when building

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Imports:
 License: MIT
 URL: http://ramnathv.github.com/slidify/
 BugReports: https://github.com/ramnathv/slidify/issues
+BuildKeepEmpty: TRUE
 Collate:
     'add.R'
     'assets.R'
