add slidify opencpu app

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(publish_rpubs)
 export(blogify)
 export(pagify)
 export(slidify)
+export(slidify_text)
 export(view_deck)
 import(knitr)
 import(markdown)
