--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(pagify)
 export(slidify)
 export(slidify_text)
 export(view_deck)
+export(knit2slides)
 import(knitr)
 import(markdown)
 import(stringr)
