Added myself to contribution file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,10 @@ Type: Package
 Title: Generate reproducible html5 slides from R markdown
 Version: 0.4.5
 Date: 2012-10-18
+Authors@R: c(person("Ramnath", "Vaidyanathan", role = c("aut", "cre"),
+                     email = "ramnath.vaidya@gmail.com"),
+              person("John", "Muschelli", role = "ctb", 
+              email = "muschellij2@gmail.com"))
 Author: Ramnath Vaidyanathan <ramnath.vaidya@gmail.com>
 Maintainer: Ramnath Vaidyanathan <ramnath.vaidya@gmail.com>
 Description: This package provides a tool to generate reproducible html5 slides
