--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: slidify
 Type: Package
 Title: Generate reproducible html5 slides from R markdown
-Version: 0.4.5
+Version: 0.5
 Date: 2012-10-18
 Authors@R: c(person("Ramnath", "Vaidyanathan", role = c("aut", "cre"),
                      email = "ramnath.vaidya@gmail.com"),
@@ -14,9 +14,9 @@ Description: This package provides a tool to generate reproducible html5 slides
 Depends:
     R (>= 2.15.0)
 Imports:
-    knitr (>= 0.1),
+    knitr (>= 1.0.0),
     markdown,
-    stringr,
+    stringr (>= 1.0.0),
     yaml,
     whisker
 License: MIT
